feat: redirect button to web app

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                         <a class="nav-link" data-scroll-nav="3" href="#">Reviews</a>
                     </li>
                 </ul>
+                <form class="d-flex px-5">
+                    <a class="btn btn-dark" type="button" href="#">Comienza ahora</a>
+                </form> 
             </div>
         </div>
 
