--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </li>
                 </ul>
                 <form class="d-flex px-5">
-                    <a class="btn btn-dark" type="button" href="#">Comienza ahora</a>
+                    <a class="btn btn-dark" type="button" href="https://ujobs-frontend.netlify.app">Comienza ahora</a>
                 </form> 
             </div>
         </div>
