repair fotos team

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-    <title>UJOBS - Landing Page</title>
+    <title>Repair It - Landing Page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- owl carousel icons -->
@@ -50,7 +50,7 @@
                     </li>
                 </ul>
                 <form class="d-flex px-5">
-                    <a class="btn btn-dark" type="button" href="https://ujobs-frontend.netlify.app">Comienza ahora</a>
+                    <a class="btn btn-dark" type="button" href="#">Comienza ahora</a>
                 </form> 
             </div>
         </div>
@@ -264,7 +264,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-3 col-md-6">
                 <div class="team-item">
-                    <img src="img/team/frank_alva.jpg" alt="team">
+                    <img src="img/team/gianfranco_ortiz.PNG" alt="team">
                     <h3>GianFranco Ortiz</h3>
                     <span>Ingeniería de Software</span>
                 </div>
@@ -278,7 +278,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="team-item">
-                    <img src="img/team/brayan_morales.jpg" alt="team">
+                    <img src="img/team/jose_vara.PNG" alt="team">
                     <h3>Carlos Vara</h3>
                     <span>Ingeniería de Software</span>
                 </div>
@@ -363,7 +363,7 @@
                         <i class="fas fa-quote-right"></i>
                     </div>
                     <p>Using UJOBS, I significantly boosted my opportunities and increased my success as a skilled technician.</p>
-                    <h3>Carlos Vara</h3>
+                    <h3>Diego Ramos</h3>
                     <span>Technician</span>
                     <div class="rating">
                         <i class="fas fa-star"></i>
